# lumo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/lumo/app/: BridgeInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lumo/app/: MainActivity.kt
android/app/src/main/java/com/lumo/app/data/: LumoRepository.kt  PythonBridge.kt
android/app/src/main/java/com/lumo/app/data/dto/: ChatDto.kt  NoteDto.kt  PlanDto.kt  QuizDto.kt  StatsDto.kt
android/app/src/main/java/com/lumo/spike/: MainActivity.kt
android/app/src/main/python/: lumo_integration_test.py  lumo_spike.py
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
docs/: 2026-07-22-lumo-design.md  2026-07-22-p0-mvp-spec.md  2026-07-22-senza-android-spike-plan.md  2026-07-22-senza-android-spike-results.md  DEVELOPMENT.md
docs/plans/: 2026-07-22-plan1a-foundation.md  2026-07-22-plan1b-store-crud.md  2026-07-22-plan1c-config-bridge.md  2026-07-22-plan2-ai-tutor-chat.md  2026-07-23-plan3-ux-completion.md
docs/superpowers/specs/: 2026-07-23-refactor-design.md
python/: README.md  conftest.py  pyproject.toml
python/lumo/: __init__.py  agent.py  bridge.py  config.py  prompts.py  store.py  tools.py  workflows.py
python/lumo/bridge/: __init__.py  _serialization.py  chat.py  daily.py  notes.py  plans.py  provider.py  quiz.py  stats.py
python/lumo/store/: __init__.py  memory.py  notes.py  plans.py  quiz.py  schema.py  sessions.py  stats.py
python/tests/: conftest.py  test_agent.py  test_bridge.py  test_bridge_edge.py  test_config.py  test_prompts.py  test_store.py  test_store_edge.py  test_tools.py  test_workflows.py
scripts/: debug_device.sh  fetch_senza_wheels.sh
(+19 files in other folders)
