[workspace]
members = [
    "crates/lumo-runtime",
    "crates/lumo-agent",
    "crates/lumo-tools",
    "crates/lumo-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
llm-harness-agent = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-agent" }
llm-harness-types = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-types" }
llm-harness-loop  = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-loop" }
llm-harness-runtime = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-runtime" }

llm_adapter = { git = "https://github.com/oh-my-harness/llm-api-adapter", rev = "69a868f5c8aa33059900f132e9c93366d1e479c3" }

anyhow      = "1"
async-trait = "0.1"
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
uniffi      = { version = "0.29", features = ["cli"] }
rusqlite    = { version = "0.32", features = ["bundled"] }
