[project]
name = "lumo"
version = "0.1.0"
description = "Lumo — AI learning coach, Python core"
requires-python = ">=3.9"
dependencies = [
    "senza-sdk",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
